workload/a0005-i/web-frontend/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-frontend
  labels:
    app.kubernetes.io/name: a0005
    app.kubernetes.io/component: web-frontend
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: a0005
      app.kubernetes.io/component: web-frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # For our service mesh proxy to talk to the service
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: osm-system
    - from:
        # From Ingress Controller
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
              app.kubernetes.io/instance: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/component: controller
              app.kubernetes.io/instance: ingress-nginx
      ports:
        # To our pod's port
        - port: 8080
          protocol: TCP
  egress:
    - to:
       # For our service mesh proxy to talk to its xDS controller
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: osm-system
    - to:
        # To microservice-a in a0005-o namespace
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: a0005
              pci-scope: out-of-scope
          podSelector:
            matchLabels:
              app.kubernetes.io/name: a0005
              app.kubernetes.io/component: microservice-a
      ports:
        # To microservice-a's pod port
        - port: 8080
          protocol: TCP
